Fix previous/next buttons shadows overlap - Fixes https://github.com/kamilmielnik/scrabble-solver/issues/223

--- a/packages/scrabble-solver/src/components/Solver/components/ResultCandidatePicker/ResultCandidatePicker.module.scss
+++ b/packages/scrabble-solver/src/components/Solver/components/ResultCandidatePicker/ResultCandidatePicker.module.scss
@@ -13,6 +13,14 @@
   flex: 0 0 auto;
   display: flex;
   border-radius: var(--border--radius);
+
+  &.bothEnabled {
+    box-shadow: var(--box-shadow);
+
+    .button {
+      box-shadow: none;
+    }
+  }
 }
 
 .button {
